# csv-data-analysis-skill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TEST_REPORT.md  USER_GUIDE.md  __init__.py  agent_tool.py  api_server.py  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.lock.txt  requirements.txt  run_analysis.py  skill.md
config/: team.yaml.example
references/: 统计指标参考手册.md
scripts/: __init__.py  auth.py  csv_analyzer.py  graph_builder.py  graph_state.py  tracker.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_auth.py  test_graph.py  test_team.py  test_tracker.py
tests/fixtures/: sales_2025_q4.csv
